# dfox

./: .gitignore  Cargo.toml  README.md
dfox-core/: Cargo.toml
dfox-core/src/: lib.rs
dfox-core/src/db/: mod.rs  mysql.rs  sqlite.rs
dfox-core/src/models/: schema.rs
dfox-lib/: Cargo.toml
dfox-lib/src/: errors.rs  lib.rs
dfox-lib/src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
dfox-lib/src/models/: connections.rs
dfox-tui/: Cargo.toml
dfox-tui/src/: main.rs  tui.rs
dfox-tui/src/db/: mod.rs  mysql.rs  postgres.rs
dfox-tui/src/ui/: components.rs  handlers.rs  mod.rs  screens.rs
src/: lib.rs  main.rs
src/client/: tui.rs
src/db/: mod.rs  postgres.rs
src/models/: mod.rs  schema.rs
tests/: postgres_client_tests.rs
