[package]
name = "dfox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "mysql",
  "sqlite",
] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
log = "0.4.22"
env_logger = "0.11.5"
csv = "1.3.0"
mockall = "0.13.0"
dotenv = "0.15.0"
tempfile = "3.12.0"
